[package]
name = "env-test-guard"
version = "0.3.0"
edition = "2021"
description = "Test toolkit for Rust projects that interact with Git — temporary repos, environment guards, fixture builders, and git capability detection"
license = "MIT"
repository = "https://github.com/ghektest/env-test-guard"
keywords = ["testing", "git", "fixtures", "environment", "ci"]
categories = ["development-tools::testing"]

[dependencies]
tempfile = "3"
